fixing incorrect image url and mobile spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -134,6 +134,7 @@ p {
 
 h2 {
   text-decoration: none;
+  margin-bottom: 20px;
 }
 
 .phonediv {
@@ -227,6 +228,10 @@ option {
         padding-left: 5px;
         padding-right: 5px;
     }
+
+    h2 {
+      margin-bottom: 40px;
+    }
 }
 
 /* Pasted from https://www.w3schools.com/howto/howto_css_image_gallery.asp */
@@ -280,6 +285,10 @@ div.desc {
     margin: 6px 0;
   }
 
+  h2 {
+    margin-bottom: 40px;
+  }
+
 }
 
 @media only screen and (max-width: 500px) {
@@ -299,6 +308,10 @@ div.desc {
     padding: 10px;
     text-align: left;
     margin-left: 0%;
+  }
+
+  h2 {
+    margin-bottom: 40px;
   }
 }
 
